wip shared implementation by adding some more components

--- a/settings.gradle
+++ b/settings.gradle
@@ -31,5 +31,5 @@ includeBuild "gradle/extended/${ext.GRADLE_EXTENDED_VERSION_USED}/kt-plugins"
 include("konfig")
 include("tunnel-http")
 // sample app
-// include("shared")
-// include("androidApp")
+include("shared")
+include("androidApp")
