Add iOS project

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ plugins {
     alias(additionals.plugins.android.library) apply false
     alias(additionals.plugins.kotlin.android) apply false
     alias(additionals.plugins.kotlin.multiplatform) apply false
+    alias(additionals.plugins.kotlin.cocoapods) apply false
     alias(additionals.plugins.kotlin.jvm) apply false
     alias(additionals.plugins.jetbrains.compose) apply false
     alias(additionals.plugins.compose.compiler) apply false
